opam-version: "2.0"
name: "bjack"
version: "0.1.5"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-bjack"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["jack-dev"] {os-distribution = "alpine"}
  ["libjack-dev" "libsamplerate0-dev"] {os-distribution = "debian"}
  ["libjack-dev" "libsamplerate0-dev"] {os-distribution = "ubuntu"}
  ["jack" "drfill/liquidsoap/ocaml-bjack"]
    {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-bjack/issues"
dev-repo: "git+https://github.com/savonet/ocaml-bjack.git"
synopsis:
  "Bindings for the Jack library which provides functions for linking audio programs"
